<resources>
    <string name="app_name">Mukhya Mantri Gram Sadak Yojana M.H.(v1.0.4)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="E100">100 : Unhandled exception, Please try again </string>
    <string name="E101">101 : Server error occurred, Please try again </string>
    <string name="E102">102 : Service not available, Please try again </string>
    <string name="E103">103 : Please enter username and password </string>
    <string name="E104">104 : Username or password incorrect, Try again </string>
    <string name="E105">105 : Device not registered </string>
    <string name="E106">106 : Please check your internet connection</string>
    <string name="E107">107 : No Schedule available for this month</string>
    <string name="E108">108 : Schedule Downloaded</string>
    <string name="E109">109 : Error occurred shedule download fail , Please try again </string>
    <string name="E110">110 : GPS turned off. Please On GPS</string>
    <string name="E111">111 : GPS turned on.</string>
    <string name="E112">112 : Point not set, Please try again </string>
    <string name="E113">113 : Start point already set </string>
    <string name="E114">114 : End point already set </string>
    <string name="E115">115 : Start point set successfully </string>
    <string name="E116">116 : End point set successfully </string>
    <string name="E117">117 : Please select Road / LSB </string>
    <string name="E118">118 : Please select description </string>
    <string name="E119">119 : Image Description cannot be empty </string>
    <string name="E120">120 : Image Description cannot exceed 200 characters </string>
    <string name="E121">121 : Image Description can not contain special characters</string>
    <string name="E122">122 : Maximum no. of photos already taken</string>
    <string name="E123">123 : Photo Saved</string>
    <string name="E124">124 : Error occurred, Photo not saved</string>
    <string name="E125">125 : Please wait for current location and try again</string>
    <string name="E126">126 : Please enter From Chainage</string>
    <string name="E127">127 : Please enter To Chainage</string>
    <string name="E128">128 : From Chainage should be greater than or equal to zero</string>
    <string name="E129">129 : To Chainage should be less than length</string>
    <string name="E130">130 : To Chainage should be greater than From Chainage</string>
    <string name="E131">131 : Invalid From Chainage (e.g. 1.000 or 0.101 or 0.800)</string>
    <string name="E132">132 : Invalid To Chainage (e.g. 1.000 or 0.101 or 0.800)</string>
    <string name="E133">133 : Observation details saved</string>
    <string name="E134">134 : Error occurred, Observation details not saved</string>
    <string name="E135">135 : Error while generating new id, Please try again</string>
    <string name="E136">136 : Please first Generate Id </string>
    <string name="E137">137 : Please finalize previous entry </string>
    <string name="E138">138 : No entry available to finalize </string>
    <string name="E139">139 : Error while finalizing entry, Please try again </string>
    <string name="E140">140 : Entry finalized </string>
    <string name="E141">141 : Minimum no. of photos required to finalize entry </string>
    <string name="E142">142 : New Generated Id : </string>
    <string name="E143">143 : Please select Generated Id </string>
    <string name="E144">144 : Please enter Package Id </string>
    <string name="E145">145 : Package Id cannot exceed 15 characters </string>
    <string name="E146">146 : Package Id can not contain special characters </string>
    <string name="E147">147 : No Finalized Entry available to Map roads </string>
    <string name="E148">148 : Details mapped with Generated Id </string>
    <string name="E149">149 : Error in mapping details with Generated Id. Please try again </string>
    <string name="E150">150 : Uploading Started </string>
    <string name="E151">151 : Please Enter Password</string>
    <string name="E152">152 : Incorrect Password</string>
    <string name="E153">153 : Application Reset Successful</string>
    <string name="E154">154 : Road Assigned Successful</string>
    <string name="E155">155 : Error in Road Assigned, Please try again </string>
    <string name="E156">156 : Please enter reason for unsatisfactory </string>
    <string name="E157">157 : schedule is expired (Max 30 days allowed after download)</string>
    <string name="E500">500 : Operation Successful</string>
    <string name="E404">404 : Connection Timeout, Please try again </string>
    <string name="username">UserName</string>
    <string name="hintUsername">UserName</string>
    <string name="password">Password</string>
    <string name="hintPassword">Password</string>
    <string name="onlineModeRadioButtonlabel">Online</string>
    <string name="offlineModeRadioButtonlabel">Offline</string>
    <string name="rememberString">Remember Me</string>
    <string name="login">Login</string>
    <string name="updateApp">Update App</string>
    <string name="helpline">HelpLine</string>
    <string name="demo">Live</string>
    <string name="title_activity_main_menu">Main Menu (v1.0.4)</string>
    <string name="mainMenuStdMode">Planned Mode</string>
    <string name="mainMenuUnPlannedMode">Unplanned Mode</string>
    <string name="mainMenuResetMode">Reset Mode</string>
    <string name="mainMenuMessageInboxMode">Message Inbox</string>
    <string name="mainMenuLogout">Logoff</string>
    <string name="stdModeMenuSchedule">Get Schedule</string>
    <string name="stdModeTakePhoto">Take Photos</string>
    <string name="stdModeViewSchedule">View Schedule</string>
    <string name="stdModeInpectionEntry">Fill Observations</string>
    <string name="stdModeSubmit">Submit</string>
    <string name="stdModeViewUploadRecords">View Uploaded Records</string>
    <string name="stdModeHowToUse">How To Use</string>
    <string name="title_activity_splash">MMGSY</string>
    <string name="title_activity_download_schedule">Download Schedule (v1.0.4)</string>
    <string name="title_activity_standard_menu">Planned Mode (v1.0.4)</string>
    <string name="title_activity_take_photo">Planned Mode Take Photos (v1.0.4)</string>
    <string name="takePhotoFrameTitle"> Details</string>
    <string name="takePhotoRoadName">Road : </string>
    <string name="takePhotoRoadStatus">Status : </string>
    <string name="takePhotoUniqueNo">Unique No : </string>
    <string name="takePhotoPackageId">Package : </string>
    <string name="takePhotoSanctionYear">Sanction Year : </string>
    <string name="takePhotoStateDistBlock">Location : State / District / Block </string>
    <string name="takePhotoSetStartPoint">Set Start Point</string>
    <string name="takePhotoSetEndPoint">Set End Point</string>
    <string name="takePhotoTakePhoto">Take Photo</string>
    <string name="takePhotoCancel">Cancel</string>
    <string name="takePhotosRoadDetailOKButton">OK</string>
    <string name="takePhotosNoOfPhotoTaken">Photos Taken : </string>
    <string name="title_activity_inpection_entry">Planned Mode - Fill Observations (v1.0.4)</string>
    <string name="inspectionEntryFormText">Fill Observations</string>
    <string name="inspectionEntryCancel">Cancel</string>
    <string name="gradingFormNextButton">Next</string>
    <string name="gradingFormPrevButton">Prev</string>
    <string name="title_activity_nqm_completed_grading"> Planned Mode - Observations (Completed) (v1.0.4)</string>
    <string name="S">S</string>
    <string name="SRI">SRI</string>
    <string name="U">U</string>
    <string name="NA">NA</string>
    <string name="displaySubItemTitleString">SUB ITEMS FOR OBSERVATION</string>
    <string name="saveGradingString">Save</string>
    <string name="displayQualityArrangmentString">1 Quality Arrangement</string>
    <string name="displayQualityArrangmentSubItemString">   i. Quality Arrangement</string>
    <string name="displayAttentionToQualityString">2 Attention To Quality</string>
    <string name="displayAttentionToQualitySubItemMaintenanceOfQCString">   i. Maintenance of QC Registers</string>
    <string name="displayAttentionToQualitySubItemVerificationString">   ii. Verification of test results</string>
    <string name="displayGeometricsString">3 Geometrics</string>
    <string name="displayGeometricsSubItemRoadWayWidthString">   i. Road Way Witdh</string>
    <string name="displayGeometricsSubItemCarriageWayWidthString">   ii. Carriage Way Witdh</string>
    <string name="displayGeometricsSubItemCamberString">   iii. Camber</string>
    <string name="displayGeometricsSubItemSuperElevationString">   iv. Superelevation and Extra Widening at Curves</string>
    <string name="displayGeometricsSubItemLongitudinalGradientString">   v. Longitudinal Gradient</string>
    <string name="displayEarthWorkEmbankmentString">4 Earth Work and Sub-grade in Embankment Cutting</string>
    <string name="displayEarthWorkEmbankmentSubItemQualityOfMaterialString">   i. Quality of Material for Embankment Sub Grade</string>
    <string name="displayEarthWorkEmbankmentSubItemCompactionString">   ii. Compaction</string>
    <string name="displayEarthWorkEmbankmentSubItemSideSlopesString">   iii. Side Slopes and Profile</string>
    <string name="displayEarthWorkEmbankmentSubItemStabilityString">   iv. Stability and Workmanship of Cut Slopes</string>
    <string name="displayEarthWorkEmbankmentSubItemSlopeProtectionString">   v. Adequacy of Slope Protection</string>
    <string name="displaySubBaseString">5 Sub-Base</string>
    <string name="displaySubBaseSubItemGrainSizeString">   i. Grain Size</string>
    <string name="displaySubBaseSubItemPlasticityString">   ii. Plasticity</string>
    <string name="displaySubBaseSubItemCompactionString">   iii. Compaction</string>
    <string name="displaySubBaseSubItemTotalThicknessString">   iv. Total Thickness of Layer</string>
    <string name="displayBaseCourseWaterString">6 Base Course-Water Bound Macadam</string>
    <string name="displayBaseCourseWaterSubItemGrainSizeString">   i. Grain Size of Course Aggregate</string>
    <string name="displayBaseCourseWaterSubItemPlasticityString">   ii. Plasticity of Crushable Aggregate used as fillers</string>
    <string name="displayBaseCourseWaterSubItemCompactionString">   iii. Adequacy of Compaction through volumetric analysis</string>
    <string name="displayBaseCourseWaterSubItemThicknessString">   iv. Thickness of every layer of WBM</string>
    <string name="displayBituminousString">7 Bituminous Layer Premix carpet Surface dressing</string>
    <string name="displayBituminousSubItemGradationString">   i. Gradation of Aggregate</string>
    <string name="displayBituminousSubItemMixingTemperatureString">   ii. Mixing Temperature of Mix</string>
    <string name="displayBituminousSubItemLayingTemperatureString">   iii. Laying Temperature of Mix</string>
    <string name="displayBituminousSubItemThicknessString">   iv. Thickness of Layer</string>
    <string name="displayBituminousSubItemSurfaceString">   v. Surface Evenness</string>
    <string name="displayShoulderstring">8 Shoulders</string>
    <string name="displayShouldersSubItemQualityOfMaterialString">   i. Quality of material for shoulders</string>
    <string name="displayShouldersSubItemDegreeOfCompactionString">   ii. Degree of Compaction</string>
    <string name="displayShouldersSubItemCamberString">  iii. Camber</string>
    <string name="displayCrossDrainageString">9 Cross Drainage Works</string>
    <string name="hintFromChainage">From Chainage In KM.</string>
    <string name="hintToChainage">To Chainage In KM.</string>
    <string name="unplannedGenerateIdMenuString">Generate Id</string>
    <string name="unplannedAssignRoadMenuString">Assign Road</string>
    <string name="unplannedFinalizeMenuString">Finalize</string>
</resources>