 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent" android:layout_height="wrap_content"
android:background="#E6E6E6"
 android:layout_alignParentLeft="true"
 android:layout_below="@id/spinnerImageDescriptionId"
 android:paddingBottom="15dp"
 android:paddingRight="15dp"> 
 
<!--  This is the main content -->
 
<RelativeLayout
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:layout_margin="15dp" android:background="@drawable/frame"
    android:orientation="vertical" android:padding="20dp">
 

<!-- <RelativeLayout 
    android:id="@+id/takePhotoRelativeLayoutFrameId"
    android:layout_width="fill_parent" android:layout_height="match_parent"
    android:layout_margin="15dp" 
    android:orientation="vertical" android:padding="20dp">
 -->
    <TextView 
        android:id="@+id/takePhotoUniqueNoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoUniqueNo"
        android:textSize="@dimen/font_size"/>	
     <TextView 
        android:id="@+id/takePhotoRoadNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoRoadName"
        android:layout_alignParentLeft="true"
		android:layout_below="@id/takePhotoUniqueNoId"
		android:textSize="@dimen/font_size"/>	
		<TextView 
        android:id="@+id/takePhotoRoadStatusId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoRoadStatus"
        android:layout_alignParentLeft="true"
		android:layout_below="@id/takePhotoRoadNameId"
		android:textSize="@dimen/font_size"/>
		  <TextView 
        android:id="@+id/takePhotoPackageIdId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoPackageId"
        android:layout_alignParentLeft="true"
		android:layout_below="@id/takePhotoRoadStatusId"
		android:textSize="@dimen/font_size"/>
		  <TextView 
        android:id="@+id/takePhotoSanctionYearId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoSanctionYear"
        android:layout_alignParentLeft="true"
		android:layout_below="@id/takePhotoPackageIdId"
		android:textSize="@dimen/font_size"/> 
		 <TextView 
        android:id="@+id/takePhotoStateDistBlockId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoStateDistBlock"
        android:layout_alignParentLeft="true"
		android:layout_below="@id/takePhotoSanctionYearId"
		android:textSize="@dimen/font_size"/> 
		
		 <Button
        android:id="@+id/btnTakePhotosRoadDetailOK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
         android:text="@string/takePhotosRoadDetailOKButton"
         android:textSize="@dimen/font_size"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/takePhotoStateDistBlockId"
        style="@style/btnStyleBeige" />
		  	    				
</RelativeLayout>

<!--  This is the title label -->
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E6E6E6"
        android:padding="5dp"
        android:text="@string/takePhotoFrameTitle"
        android:layout_marginLeft="30dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size" />
</RelativeLayout>
