<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bgroad"
    >
   
   <include 
     android:id="@+id/commonHeaderLayoutId"
     layout="@layout/common_header" />  
 
 <Button
        android:id="@+id/btnStdModeMenuScheduleId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeMenuSchedule"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/commonHeaderLayoutId"
        style="@style/btnStyleMenu" />
 
 
 <Button
        android:id="@+id/btnStdModeViewScheduleId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeViewSchedule"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnStdModeMenuScheduleId"
        style="@style/btnStyleMenu" />
 
 
 <Button
        android:id="@+id/btnStdModeTakePhotoId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeTakePhoto"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnStdModeViewScheduleId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnStdModeInpectionEntryId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeInpectionEntry"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnStdModeTakePhotoId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnStdModeSubmitId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeSubmit"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnStdModeInpectionEntryId"
        style="@style/btnStyleMenu" />
 
 
 <Button
        android:id="@+id/btnStdModeViewUploadRecordsId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeViewUploadRecords"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnStdModeSubmitId"
        style="@style/btnStyleMenu" />
 
 
 <Button
        android:id="@+id/btnStdModeHowToUseId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeHowToUse"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnStdModeViewUploadRecordsId"
        style="@style/btnStyleMenu"
        android:visibility="invisible" />
 
</RelativeLayout>
</ScrollView>
