<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout 
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bgroad"
    >

 <include 
     android:id="@+id/commonHeaderLayoutId"
     layout="@layout/common_header" />  
 
 <Button
        android:id="@+id/btnUnplannedModeMenuGenerateIdId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unplannedGenerateIdMenuString"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/commonHeaderLayoutId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnUnplannedModeTakePhotoId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeTakePhoto"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnUnplannedModeMenuGenerateIdId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnUnplannedModeFinalizeId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unplannedFinalizeMenuString"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnUnplannedModeTakePhotoId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnUnplannedModeAssignRoadId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unplannedAssignRoadMenuString"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnUnplannedModeFinalizeId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnUnplannedModeInpectionEntryId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeInpectionEntry"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnUnplannedModeAssignRoadId"
        style="@style/btnStyleMenu" />
  
 <Button
        android:id="@+id/btnUnplannedModeSubmitId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeSubmit"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnUnplannedModeInpectionEntryId"
        style="@style/btnStyleMenu" />
 
 <Button
        android:id="@+id/btnUnplannedModeHowToUse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stdModeHowToUse"
        android:textSize="@dimen/font_size"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnUnplannedModeSubmitId"
        style="@style/btnStyleMenu" 
        android:visibility="invisible" />
 
 
</RelativeLayout>
</ScrollView>
